# tapedeck

./: .coveragerc  .env  .gitignore  .into  .readthedocs.yml  Cargo.toml  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  azure-pipelines.yml  kbhit.py  requirements-test.txt  requirements.txt  run  setup.cfg  setup.py  sitecustomize.py  sqlx-data.json  tapedeck  tapedeck.py  tox.ini  trio_repl.py
_tapedeck/: search.py
_tapedeck/cli/: main.py
config/: aria2.daemon
docs/: conf.py  index.rst  logging.rst  reel.rst  requirements.txt
docs/source/: conf.py  index.rst
etc/: requirements-dist.txt  requirements-test.txt  todo.txt  triotrials.txt
etc/curses/: input.py  input2.py  input3.py
etc/oldcode/: find_tunes.py  ripper.py
etc/oldcode/soundmeter/: aaa2.py  animate.py  animate2.py  asdf.py  asdf2.py  mic_meter.py  micmeter.py  micmeter2.py  micmeter3.py  plotter.py  plotter2.py  plotter3.py  soundin.py  soundin2.py  soundin3.py  soundin99.py  xxx.py
migrations/: 20210302123556_audio_dir.sql
reel/: __init__.py  _config.py  _daemon.py  _path.py  _reel.py  _server.py  _spool.py  _streamer.py  _track.py  _transport.py  _version.py  cli.py  config.py  io.py  keyboard.py  proc.py  tools.py
reel/cmd/: __init__.py  _aria2.py  _redis.py  ffmpeg.py  ffprobe.py  icecast.py  play.py  sox.py  tapedeck.py
reel/templates/: icecast.xml  redis.conf
src/: audio.rs  audio_dir.rs  cmd.rs  database.rs  ffmpeg.rs  keyboard.rs  lib.rs  logging.rs  playlist.rs  pls.pest  pls.rs  screen.rs  shell.rs  system.rs  term.rs  terminal.rs  transport.rs  user.rs
src/audio/: dir.rs
src/cmd/: ffmpeg.rs  sox.rs
src/tapedeck/: __init__.py  __main__.py  aria2.py  completion.py  config.py  dbus.py  dbus2.py  dispatch.py  etree.py  format.py  language.py  mpd.py  parser.py  pulse.py  redis.py  test.py  udev.py  util.py
src/tapedeck/aria2/: format.py  proxy.py
src/tapedeck/etree/: format.py  proxy.py
src/tapedeck/mpd/: proxy.py
tapedeck/: __init__.py  _config.py  cli.py  config.py  pypeline.py  search.py
tapedeck/cli/: __init__.py  main.py  play.py  search.py
tests/: __init__.py  audio_dir.rs  conftest.py  fixtures.py  test_api.py  test_cli.py  test_cli_play.py  test_cli_search.py  test_cmd.py  test_config.py  test_io.py  test_keyboard.py  test_package.py  test_path.py  test_proc.py  test_pypeline.py  test_reel.py  test_search.py  test_spool.py  test_tapedeck.py  test_tools.py  test_track.py
