[package]
name = "tapedeck"
version = "0.1.0"
authors = ["Zach Thompson <zach@allotropic.com>"]
edition = "2018"
license = "MIT"
description = "A cli tool for organizing and enjoying music collections."
homepage = "https://github.com/zthompson47/tapedeck"
repository = "https://github.com/zthompson47/tapedeck"
readme = "README.md"
keywords = ["cli", "player", "audio", "music", "search"]
categories = ["command-line-utilities", "multimedia::audio"]

[dependencies]
anyhow = "1.0.38"
bytes = "0.6.0"
chrono = "0.4.19"
crossterm = { version = "0.18.2", features = ["event-stream"] }
futures = "0.3"
lazy_static = "1.4.0"
libc = "0.2.81"
libpulse-binding = "2.23.0"
libpulse-simple-binding = "2.23.0"
log = "0.4.14"
mime_guess = "2.0.3"
pest = "2.1.3"
pest_derive = "2.1.0"
pls = "0.2.2"
reqwest = "0.11.1"
rusqlite = "0.25.3"
structopt = "0.3.20"
tokio = { version = "1.16", features = ["full"] }
tokio-stream = "0.1.4"
tracing = { version = "0.1.22", features = ["log"] }
tracing-subscriber = "0.2.15"
tracing-appender = "0.1.2"
tracing-log = "0.1.1"
unicode-width = "0.1.8"
url = "2.2.0"
walkdir = "2.3.1"

[dev-dependencies]
log = "0.4.11"
tempfile = "3.2.0"
