[package]
name = "tapedeck"
version = "0.1.0"
authors = ["Zach Thompson <zach@allotropic.com>"]
edition = "2018"
license = "MIT"
description = "A cli tool for organizing and enjoying music collections."
homepage = "https://github.com/zthompson47/tapedeck"
repository = "https://github.com/zthompson47/tapedeck"
readme = "README.md"
keywords = ["cli", "player", "audio", "music", "search"]
categories = ["command-line-utilities", "multimedia::audio"]

[dependencies]
anyhow = "1.0.68"
bytes = "1.3.0"
# https://github.com/chronotope/chrono/issues/602#issuecomment-1242149249
chrono = { version = "0.4.23", default-features = false, features = ["clock"] }
clap = { version = "4.0.32", features = ["derive"] }
crossterm = { version = "0.25.0", features = ["event-stream"] }
futures = "0.3.25"
lazy_static = "1.4.0"
libc = "0.2.139"
libpulse-binding = "2.26.0"
libpulse-simple-binding = "2.25.0"
log = "0.4.17"
mime_guess = "2.0.4"
pest = "2.5.2"
pest_derive = "2.5.2"
pls = "0.2.2"
reqwest = "0.11.13"
rusqlite = "0.28.0"
tokio = { version = "1.24.1", features = ["full"] }
tokio-stream = "0.1.11"
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing-appender = "0.2.2"
tracing-log = "0.1.3"
unicode-width = "0.1.10"
url = "2.3.1"
walkdir = "2.3.2"

[dev-dependencies]
tempfile = "3.3.0"
