[package]
name = "tapedeck"
version = "0.1.0"
authors = ["Zach Thompson <zach@allotropic.com>"]
edition = "2021"
license = "MIT"
description = "A cli tool for organizing and enjoying music collections."
homepage = "https://github.com/zthompson47/tapedeck"
repository = "https://github.com/zthompson47/tapedeck"
readme = "README.md"
keywords = ["cli", "player", "audio", "music", "search"]
categories = ["command-line-utilities", "multimedia::audio"]

[dependencies]
anyhow = "1.0.71"
bytes = "1.4.0"
# https://github.com/chronotope/chrono/issues/602#issuecomment-1242149249
chrono = { version = "0.4.24", default-features = false, features = ["clock"] }
clap = { version = "4.3.0", features = ["derive"] }
crossterm = { version = "0.26.1", features = ["event-stream"] }
futures = "0.3.28"
lazy_static = "1.4.0"
libc = "0.2.144"
libpulse-binding = "2.27.1"
libpulse-simple-binding = "2.27.1"
log = "0.4.17"
mime_guess = "2.0.4"
pest = "2.6.0"
pest_derive = "2.6.0"
pls = "0.2.2"
reqwest = "0.11.18"
rusqlite = "0.29.0"
tokio = { version = "1.28.1", features = ["full"] }
tokio-stream = "0.1.14"
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing-appender = "0.2.2"
tracing-log = "0.1.3"
unicode-width = "0.1.10"
url = "2.3.1"
walkdir = "2.3.3"

[dev-dependencies]
tempfile = "3.5.0"
